@@ -1,6 +1,10 @@
 1.2.1 - 201309xx
 ================
 
+Broker:
+- The broker no longer ignores the auth_plugin_init() return value. Closes
+  bug #1215084.
+
 Client library:
 - Fix support for Python 2.6, 3.0, 3.1.
 
